--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -19,5 +19,5 @@
     "^@/app/(.*)$",
     "^[.]"
   ],
-  "plugins": ["@ianvs/prettier-plugin-sort-imports" ]
+  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
 }
