--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "lefthook": "^2.0.13",
     "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "turbo": "^2.7.2",
     "typescript": "5.9.2"
   },
