--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "type": "module",
   "scripts": {
     "build": "turbo run build",
+    "build:static": "turbo build -F static",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
+    "dev:static": "turbo dev -F static",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "typecheck": "turbo run typecheck",
-    "postinstall": "lefthook install"
+    "postinstall": "lefthook install",
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
