--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
+  "type": "module",
   "exports": {
     "./*": "./src/*.tsx",
     "./globals.css": "./src/styles/globals.css",
@@ -27,7 +27,8 @@
     "tailwindcss": "^4.1.18",
     "typescript": "5.9.2"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "next": "16.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
