--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "turbo": "^2.7.2",
-    "typescript": "5.9.2"
+    "typescript": "catalog:"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.27.0",
   "engines": {
     "node": ">=18"
   }
