--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,11 +25,11 @@
     "postcss": "^8.5.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "5.9.2"
+    "typescript": "catalog:"
   },
   "peerDependencies": {
-    "next": "16.1.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "next": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   }
 }
