--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,13 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+
+catalog:
+  next: 16.1.0
+  react: 19.2.3
+  react-dom: 19.2.3
+  typescript: 5.9.2
+
+onlyBuiltDependencies:
+  - lefthook
+  - sharp
