feat: init terraform with aws s3 bucket for remote state

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,11 @@
   "tailwindCSS.classFunctions": ["cva", "cx"],
   "files.associations": {
     "*.css": "tailwindcss"
+  },
+  "[terraform]": {
+    "editor.defaultFormatter": "hashicorp.terraform"
+  },
+  "[terraform-vars]": {
+    "editor.defaultFormatter": "hashicorp.terraform"
   }
 }
