--- a/.github/workflows/infra-main.yaml
+++ b/.github/workflows/infra-main.yaml
@@ -63,6 +63,14 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
+      - name: Upload Terraform Plan
+        uses: actions/upload-artifact@v4
+        if: github.ref == 'refs/heads/main'
+        with:
+          name: terraform-plan-main
+          path: infra/terraform/main/tfplan
+          retention-days: 1
+
   terraform-apply:
     name: Terraform Apply - Main
     runs-on: ubuntu-latest
@@ -93,8 +101,14 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v4
+        with:
+          name: terraform-plan-main
+          path: infra/terraform/main
+
       - name: Terraform Init
         run: terraform init
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply tfplan
